--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
 
+/* @link https://utopia.fyi/type/calculator?c=360,18,1.2,1240,26,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #070707;
+  --foreground: #ffff;
+  --accent: #ff2a70;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --color-accent: var(--accent);
+  --project-grid-cols: [full-start] 1fr [content-start] minmax(0, 1200px) [content-end] 1fr [full-end];
+  --content-col: content;
+  --full-col: full;
+  /* font sizes */
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --step--2: clamp(0.7813rem, 0.6754rem + 0.4705vw, 1.04rem);
+  --step--1: clamp(0.9375rem, 0.7892rem + 0.6591vw, 1.3rem);
+  --step-0: clamp(1.125rem, 0.9205rem + 0.9091vw, 1.625rem);
+  --step-1: clamp(1.35rem, 1.0713rem + 1.2386vw, 2.0313rem);
+  --step-2: clamp(1.62rem, 1.244rem + 1.671vw, 2.5391rem);
+  --step-3: clamp(1.944rem, 1.4409rem + 2.2361vw, 3.1738rem);
+  --step-4: clamp(2.3328rem, 1.6641rem + 2.9718vw, 3.9673rem);
+  --step-5: clamp(2.7994rem, 1.9158rem + 3.9268vw, 4.9591rem);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Ubuntu, sans-serif;
 }
